arrow z-index fix

--- a/app/scss/_apps.scss
+++ b/app/scss/_apps.scss
@@ -13,6 +13,7 @@
       position: relative;
       top: 2px;
       left: 10px;
+      z-index: -1;
     }
   }
 
